force-app/main/default/objects/Account/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <formula>IF( Region_Name__c = &quot;US North Star&quot; || Region_Name__c = &quot;US Mountain&quot; || Region_Name__c = &quot;US West&quot; || Region_Name__c = &quot;US South Bay&quot; || Region_Name__c = &quot;US Golden Gate&quot; || Region_Name__c = &quot;US Los Angeles&quot; || Region_Name__c = &quot;US Pacific NW&quot;, &quot;Frank Rovello&quot;, 
IF(Region_Name__c = &quot;US So New England&quot; || Region_Name__c = &quot;US No New England&quot; || Region_Name__c = &quot;US Metro NY&quot; || Region_Name__c = &quot;US Garden State&quot; || Region_Name__c = &quot;US Key Stone&quot; || Region_Name__c = &quot;US Chesapeake Bay&quot;, &quot;Jeff Scott&quot;,
IF(Region_Name__c = &quot;US Capitol&quot; || Region_Name__c = &quot;US Appalachian&quot; || Region_Name__c = &quot;US Southern&quot; || Region_Name__c = &quot;US North Florida&quot; || Region_Name__c = &quot;US South Florida&quot; || Region_Name__c = &quot;US Mississippi Delta&quot; || Region_Name__c = &quot;US Southeast&quot;|| Region_Name__c = &quot;US SouthEast&quot;, &quot;Heath Gomez&quot;, 
IF(Region_Name__c = &quot;US Lone Star&quot; || Region_Name__c = &quot;US Buckeye&quot; || Region_Name__c = &quot;US Great Lakes&quot; || Region_Name__c = &quot;US Chicago Land&quot; || Region_Name__c = &quot;US Central&quot;, &quot;Craig Gallman&quot;, 
null))))</formula>
    <label>CSM</label>
    <type>Text</type>
</CustomField>