force-app/main/default/objects/Account/fields/Current_EDI_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_EDI_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current EDI Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>