force-app/main/default/objects/Account/fields/Current_Fiscal_Quarterly_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Quarterly_Sales__c</fullName>
    <label>Current Fiscal Quarterly Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>