force-app/main/default/objects/Account/fields/Current_FY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Revenue__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Report/00OC0000004ZuLTMA0/view?fv0=&apos;&amp; Id , &apos;Current FY Revenue Report&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current FY Revenue</label>
    <type>Text</type>
</CustomField>