force-app/main/default/objects/Account/fields/Cust_No__c.field-meta.xml
<CustomField>
    <fullName>Cust_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cust. No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>