force-app/main/default/objects/Account/fields/Customer_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Record_Type__c</fullName>
    <formula>IF( Sync_ID__c = &quot;&quot;,  &quot;Prospect Account&quot;, &quot;BV Account&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Record Type</label>
    <type>Text</type>
</CustomField>