force-app/main/default/objects/Account/fields/Customer_Requested_Date_832__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Date_832__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Requested Date (832)</label>
    <type>Date</type>
</CustomField>