force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ambulatory Surgery Centre (ASC)</fullName>
            </value>
            <value>
                <fullName>Buying Group</fullName>
            </value>
            <value>
                <fullName>District Hospital</fullName>
            </value>
            <value>
                <fullName>General Hospital</fullName>
            </value>
            <value>
                <fullName>Hospital Pharmacy</fullName>
            </value>
            <value>
                <fullName>Managing Company</fullName>
            </value>
            <value>
                <fullName>Medical Care Centre (MCC)</fullName>
            </value>
            <value>
                <fullName>Medical Practice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Private Hospital</fullName>
            </value>
            <value>
                <fullName>Regional Hospital</fullName>
            </value>
            <value>
                <fullName>University Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>