force-app/main/default/objects/Account/fields/Customer_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Type Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>