force-app/main/default/objects/Account/fields/CY01_Jan__c.field-meta.xml
<CustomField>
    <fullName>CY01_Jan__c</fullName>
    <formula>BVPERSLSTY01__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY01 Jan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>