force-app/main/default/objects/Account/fields/CY02_Feb__c.field-meta.xml
<CustomField>
    <fullName>CY02_Feb__c</fullName>
    <formula>BVPERSLSTY02__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY02 Feb</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>