force-app/main/default/objects/Account/fields/CY03_Mar__c.field-meta.xml
<CustomField>
    <fullName>CY03_Mar__c</fullName>
    <formula>BVPERSLSTY03__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY03 Mar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>