force-app/main/default/objects/Account/fields/CY04_Apr__c.field-meta.xml
<CustomField>
    <fullName>CY04_Apr__c</fullName>
    <formula>BVPERSLSTY04__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY04 Apr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>