force-app/main/default/objects/Account/fields/CY05_May__c.field-meta.xml
<CustomField>
    <fullName>CY05_May__c</fullName>
    <formula>BVPERSLSTY05__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY05 May</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>