force-app/main/default/objects/Account/fields/CY06_Jun__c.field-meta.xml
<CustomField>
    <fullName>CY06_Jun__c</fullName>
    <formula>BVPERSLSTY06__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY06 Jun</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>