force-app/main/default/objects/Account/fields/CY07_Jul__c.field-meta.xml
<CustomField>
    <fullName>CY07_Jul__c</fullName>
    <formula>BVPERSLSTY07__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY07 Jul</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>