force-app/main/default/objects/Account/fields/CY08_Aug__c.field-meta.xml
<CustomField>
    <fullName>CY08_Aug__c</fullName>
    <formula>BVPERSLSTY08__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY08 Aug</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>