force-app/main/default/objects/Account/fields/CY09_Sep__c.field-meta.xml
<CustomField>
    <fullName>CY09_Sep__c</fullName>
    <formula>BVPERSLSTY09__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY09 Sep</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>