force-app/main/default/objects/Account/fields/CY10_Oct__c.field-meta.xml
<CustomField>
    <fullName>CY10_Oct__c</fullName>
    <formula>BVPERSLSTY10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY10 Oct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>