force-app/main/default/objects/Account/fields/CY11_Nov__c.field-meta.xml
<CustomField>
    <fullName>CY11_Nov__c</fullName>
    <formula>BVPERSLSTY11__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY11 Nov</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>