force-app/main/default/objects/Account/fields/CY12_Dec__c.field-meta.xml
<CustomField>
    <fullName>CY12_Dec__c</fullName>
    <formula>BVPERSLSTY12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY12 Dec</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>