force-app/main/default/objects/Account/fields/Date_of_Last_Sale__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Sale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Last Sale</label>
    <type>Date</type>
</CustomField>