force-app/main/default/objects/Account/fields/DCS_Modify_Date__c.field-meta.xml
<CustomField>
    <fullName>DCS_Modify_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DCS Modify Date</label>
    <type>Date</type>
</CustomField>