force-app/main/default/objects/Account/fields/DCS_Status__c.field-meta.xml
<CustomField>
    <fullName>DCS_Status__c</fullName>
    <label>DCS Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>