force-app/main/default/objects/Account/fields/DCSNo__c.field-meta.xml
<CustomField>
    <fullName>DCSNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DCSNo</label>
    <length>32</length>
    <type>Text</type>
</CustomField>