force-app/main/default/objects/Account/fields/DEA_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>DEA_Exp_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DEA Exp Date</label>
    <type>Date</type>
</CustomField>