force-app/main/default/objects/Account/fields/Deactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactive_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date this account was inactivated as a customer</inlineHelpText>
    <label>Deactive Date</label>
    <type>Date</type>
</CustomField>