force-app/main/default/objects/Account/fields/Dec_CY_PY__c.field-meta.xml
<CustomField>
    <fullName>Dec_CY_PY__c</fullName>
    <formula>CY12_Dec__c - PY12_DEC_LAST_YEAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dec CY-PY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>