force-app/main/default/objects/Account/fields/Delete__c.field-meta.xml
<CustomField>
    <fullName>Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delete this Account</description>
    <inlineHelpText>This will delete the Account from SFDC and from the Integration internal tables.  See Ron Cowan or Rob Moulton for more information.</inlineHelpText>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>