force-app/main/default/objects/Account/fields/Delta__c.field-meta.xml
<CustomField>
    <fullName>Delta__c</fullName>
    <formula>Year_To_Date_Sales__c - Last_Year_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>