force-app/main/default/objects/Account/fields/Dental_Opp_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Dental_Opp_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dental Opp Conversion</label>
    <type>Checkbox</type>
</CustomField>