force-app/main/default/objects/Account/fields/Dental_Org_ABC__c.field-meta.xml
<CustomField>
    <fullName>Dental_Org_ABC__c</fullName>
    <formula>LEFT( Customer_Number__c ,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dental Org ABC</label>
    <type>Text</type>
</CustomField>