force-app/main/default/objects/Account/fields/Dental_Profile_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Dental_Profile_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dental Profile Exempt</label>
    <type>Checkbox</type>
</CustomField>