force-app/main/default/objects/Account/fields/Development_Interest__c.field-meta.xml
<CustomField>
    <fullName>Development_Interest__c</fullName>
    <label>Development Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cement Spacer</fullName>
            </value>
            <value>
                <fullName>ZMR LE Larger sizes only</fullName>
            </value>
            <value>
                <fullName>Fracture Stem Project</fullName>
            </value>
            <value>
                <fullName>Advisory Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>