force-app/main/default/objects/Account/fields/Development_Team_Interest__c.field-meta.xml
<CustomField>
    <fullName>Development_Team_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a surgeon is interested in being part of our development team</description>
    <inlineHelpText>Check this box if the  surgeon is interested in our Development team efforts</inlineHelpText>
    <label>Development Team Interest?</label>
    <type>Checkbox</type>
</CustomField>