force-app/main/default/objects/Account/fields/Digital_Sales_Trend__c.field-meta.xml
<CustomField>
    <fullName>Digital_Sales_Trend__c</fullName>
    <formula>IF(DN_Digital_PYTD_Manual_Rollup__c  &lt;&gt; 0, ((DN_Digital_YTD_Manual_Rollup__c - DN_Digital_PYTD_Manual_Rollup__c)/ ABS(DN_Digital_PYTD_Manual_Rollup__c)), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digital Sales Trend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>