force-app/main/default/objects/Account/fields/Digital_Solutions_Change__c.field-meta.xml
<CustomField>
    <fullName>Digital_Solutions_Change__c</fullName>
    <formula>IF(Digital_Solutions_PYTD__c  &lt;&gt; 0, (Digital_Solutions_YTD__c - Digital_Solutions_PYTD__c )/Digital_Solutions_PYTD__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digital % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>