force-app/main/default/objects/Account/fields/Digital_Solutions_PYTD__c.field-meta.xml
<CustomField>
    <fullName>Digital_Solutions_PYTD__c</fullName>
    <label>Digital PYTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>