force-app/main/default/objects/Account/fields/Digital_Solutions_YTD__c.field-meta.xml
<CustomField>
    <fullName>Digital_Solutions_YTD__c</fullName>
    <label>Digital YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>