force-app/main/default/objects/Account/fields/Discounts__c.field-meta.xml
<CustomField>
    <fullName>Discounts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discounts</label>
    <length>50</length>
    <type>Text</type>
</CustomField>