force-app/main/default/objects/Account/fields/Distributor_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Distributor_E_mail__c</fullName>
    <description>This field will provide the email for the distributor</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Distributor E-mail</label>
    <type>Email</type>
</CustomField>