force-app/main/default/objects/Account/fields/Distributor_Specialties__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Specialties__c</fullName>
    <label>Distributor Specialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reconstructive</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>CMF&amp;T</fullName>
            </value>
            <value>
                <fullName>OBT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>