force-app/main/default/objects/Account/fields/Distributorship__c.field-meta.xml
<CustomField>
    <fullName>Distributorship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributorship</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Account)</relationshipLabel>
    <relationshipName>Distributorship</relationshipName>
    <type>Lookup</type>
</CustomField>