force-app/main/default/objects/Account/fields/DN_Datatrim_Customer_Number_Match__c.field-meta.xml
<CustomField>
    <fullName>DN_Datatrim_Customer_Number_Match__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DN-Datatrim Customer Number Match</label>
    <length>20</length>
    <type>Text</type>
</CustomField>