force-app/main/default/objects/Account/fields/DN_DataTrim_MatchKey__c.field-meta.xml
<CustomField>
    <fullName>DN_DataTrim_MatchKey__c</fullName>
    <formula>IF( RecordType.Name= &apos;DN-CA-Account_Record_Type&apos;,  BillingStreet &amp; &apos; - &apos; &amp; BillingCity , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DN-DataTrim MatchKey</label>
    <type>Text</type>
</CustomField>