force-app/main/default/objects/Account/fields/DN_Datatrim_Phone_Match__c.field-meta.xml
<CustomField>
    <fullName>DN_Datatrim_Phone_Match__c</fullName>
    <description>This Field is made Visible Only For DN System Administrator, System Administrator and Data Trim Administrator</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DN-Datatrim Phone Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>