force-app/main/default/objects/Account/fields/DN_GROUP_GPO__c.field-meta.xml
<CustomField>
    <fullName>DN_GROUP_GPO__c</fullName>
    <label>DN GROUP-GPO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Advantage</fullName>
            </value>
            <value>
                <fullName>Affordable Dentures</fullName>
            </value>
            <value>
                <fullName>AllAccess</fullName>
            </value>
            <value>
                <fullName>Allied</fullName>
            </value>
            <value>
                <fullName>Altima (Canada)</fullName>
            </value>
            <value>
                <fullName>American Dental Partners</fullName>
            </value>
            <value>
                <fullName>Aspen</fullName>
            </value>
            <value>
                <fullName>Baystate</fullName>
            </value>
            <value>
                <fullName>Clear Choice</fullName>
            </value>
            <value>
                <fullName>Coast/Smilecare/Nevada</fullName>
            </value>
            <value>
                <fullName>Comfort Dental</fullName>
            </value>
            <value>
                <fullName>Concerned</fullName>
            </value>
            <value>
                <fullName>Dca/Gentle (Mi-Pa-Va)</fullName>
            </value>
            <value>
                <fullName>Dental Associates</fullName>
            </value>
            <value>
                <fullName>Dental Corp (Canada)</fullName>
            </value>
            <value>
                <fullName>DentalOne Partners</fullName>
            </value>
            <value>
                <fullName>DSG Dental Lab</fullName>
            </value>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>First Advantage</fullName>
            </value>
            <value>
                <fullName>Fusion</fullName>
            </value>
            <value>
                <fullName>Gentle (Fl)</fullName>
            </value>
            <value>
                <fullName>Gentle (Ma)</fullName>
            </value>
            <value>
                <fullName>Gentle (Ny)</fullName>
            </value>
            <value>
                <fullName>Great Expressions</fullName>
            </value>
            <value>
                <fullName>Half</fullName>
            </value>
            <value>
                <fullName>Hawaii Family</fullName>
            </value>
            <value>
                <fullName>HealthPartners</fullName>
            </value>
            <value>
                <fullName>Heartland</fullName>
            </value>
            <value>
                <fullName>Imagix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>