force-app/main/default/objects/Account/fields/DN_Implant_Dollars_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>DN_Implant_Dollars_Gain_Loss__c</fullName>
    <formula>DN_Implant_YTD_Manual_Rollup__c -  DN_Implant_PYTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DN-Implant Dollars Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>