force-app/main/default/objects/Account/fields/DN_Implant_Units_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>DN_Implant_Units_Gain_Loss__c</fullName>
    <formula>DN_Implant_Units_YTD_Manual_Rollup__c - DN_Implant_Units_PYTD_Manual_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DN-Implant Units Gain/Loss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>