force-app/main/default/objects/Account/fields/DN_Implant_Units_YTD_Manual_Rollup__c.field-meta.xml
<CustomField>
    <fullName>DN_Implant_Units_YTD_Manual_Rollup__c</fullName>
    <description>Dental Rollup Field</description>
    <label>DN-Implant Units YTD</label>
    <summarizedField>Sales_History__c.Implant_Units__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_History__c.Invoice_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_History__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>